--- a/energy.ipynb
+++ b/energy.ipynb
@@ -368,7 +368,7 @@
    "outputs": [],
    "source": [
     "# Create database connection and add tables/data to sql database\n",
-    "engine = create_engine('postgresql+psycopg2://postgres:9102@localhost/energy_consumption_db?port=5432') "
+    "engine = create_engine('postgresql+psycopg2://postgres:password@localhost/energy_consumption_db?port=5432') "
    ]
   },
   {
